correcting spacing

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
   
   nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: white;
     padding: 8px 16px;
 
@@ -18,7 +18,8 @@
 
   #destinations {
     display: flex;
-    align-items: center;
+    justify-content: space-around;
+  
 
 
   
@@ -26,7 +27,7 @@
 
 #actions {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly
   
   }
 
